--- a/index1.html
+++ b/index1.html
@@ -80,12 +80,12 @@
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="1Max_Temperature.html">
-                  <img class="panel" src="./Resources/assets/images_new/Fig1new.png" alt="Max Temperature Image">
+                  <img class="panel" src="./Resources/Fig1new.png" alt="Max Temperature Image">
                 </a>
               </div>
               <div class="col-6">
                 <a href="2Humidity.html">
-                  <img class="panel" src="./Resources/assets/images_new/Fig2new.png" alt="Humidity Graph">
+                  <img class="panel" src="./Resources/Fig2new.png" alt="Humidity Graph">
                 </a>
               </div>
             </div>
@@ -93,12 +93,12 @@
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="3Cloudiness.html">
-                  <img class="panel" src="./Resources/assets/images_new/Fig3new.png" alt="Cloudiness Graph">
+                  <img class="panel" src="./Resources/Fig3new.png" alt="Cloudiness Graph">
                 </a>
               </div>
               <div class="col-6">
                 <a href="4Wind_Speed.html">
-                  <img class="panel" src="./Resources/assets/images_new/Fig4new.png" alt="Wind Speed Graph">
+                  <img class="panel" src="./Resources/Fig4new.png" alt="Wind Speed Graph">
                 </a>
               </div>
 
