--- a/3Cloudiness.html
+++ b/3Cloudiness.html
@@ -58,7 +58,7 @@
         <div class="box">
           <h3 class="title">Cloudiness</h3>
           <hr>
-          <img src="./Resources/assets/images_new/Fig3new.png" alt="Cloudines Graph">
+          <img src="./Resources/Fig3new.png" alt="Cloudines Graph">
           <p>Cloudiness does not show a strong correlation to latitude. The visualization shows a great variety of
             cloudiness percentages at different latitudes. Therefore, we cannot conclude that there is a conclusive
             pattern between cloudiness and latitude.</p>
@@ -75,12 +75,12 @@
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="1Max_Temperature.html">
-                  <img class="panel" src="./Resources/assets/images_new/Fig1new.png" alt="Max Temperature Image">
+                  <img class="panel" src="./Resources/Fig1new.png" alt="Max Temperature Image">
                 </a>
               </div>
               <div class="col-6">
                 <a href="2Humidity.html">
-                  <img class="panel" src="./Resources/assets/images_new/Fig2new.png" alt="Humidity Graph">
+                  <img class="panel" src="./Resources/Fig2new.png" alt="Humidity Graph">
                 </a>
               </div>
             </div>
@@ -88,12 +88,12 @@
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="3Cloudiness.html">
-                  <img class="panel active" src="./Resources/assets/images_new/Fig3new.png" alt="Cloudiness Graph">
+                  <img class="panel active" src="./Resources/Fig3new.png" alt="Cloudiness Graph">
                 </a>
               </div>
               <div class="col-6">
                 <a href="4Wind_Speed.html">
-                  <img class="panel" src="./Resources/assets/images_new/Fig4new.png" alt="Wind Speed Graph">
+                  <img class="panel" src="./Resources/Fig4new.png" alt="Wind Speed Graph">
                 </a>
               </div>
 
