--- a/Comparisons.html
+++ b/Comparisons.html
@@ -64,13 +64,13 @@
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">vs. Max Temperature</div>
                 <a href="1Max_Temperature.html">
-                  <img class="panel" src="Resources/assets/images_new/Fig1new.png" alt="Max Temperature Image">
+                  <img class="panel" src="Resources/Fig1new.png" alt="Max Temperature Image">
                 </a>
               </div>
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">vs. Humidity</div>
                 <a href="2Humidity.html">
-                  <img class="panel" src="Resources/assets/images_new/Fig2new.png" alt="Humidity Graph">
+                  <img class="panel" src="Resources/Fig2new.png" alt="Humidity Graph">
                 </a>
               </div>
             </div>
@@ -79,14 +79,14 @@
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">vs. Cloudiness</div>
                 <a href="3Cloudiness.html">
-                  <img class="panel" src="Resources/assets/images_new/Fig3new.png" alt="Cloudiness Graph">
+                  <img class="panel" src="Resources/Fig3new.png" alt="Cloudiness Graph">
                 </a>
 
               </div>
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">vs. Wind Speed</div>
                 <a href="4Wind_Speed.html">
-                  <img class="panel" src="Resources/assets/images_new/Fig4new.png" alt="Wind Speed Graph">
+                  <img class="panel" src="Resources/Fig4new.png" alt="Wind Speed Graph">
                 </a>
               </div>
             </div>
