--- a/index1.html
+++ b/index1.html
@@ -34,7 +34,7 @@
             </a>
         
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="1Max_Temperature.html">Max Temperature</a>
+              <a class="dropdown-item" href="#/1Max_Temperature.html">Max Temperature</a>
               <a class="dropdown-item" href="2Humidity.html">Humidity</a>
               <a class="dropdown-item" href="3Cloudiness.html">Cloudiness</a>
               <a class="dropdown-item" href="4Wind_Speed.html">Wind Speed</a>
